Version 1.2.1
- avoiding duplicated calculations
- better export file names

Version 1.2.0
- fix automatic average calculation bug
- fix bug initializeDeleteRowButton
- blocked first column for editing
- added more calculations
- fixed bug delete row no update calculations

Version 1.1.0
- added unlock rule button
- added delete row button
- added auto-info-add modal
- added different css for first row
- added automatic average calculation

Version 1.0.11
- fix sql scripts
- update README
- added custom auto-date
- better logs
- added read-only on old rows
- added import check-error on column B
- added special editor-debug flag

Version 1.0.10
- first row is read-only now

Version 1.0.9
- first line is read-only now

Version 1.0.8
- added debug logs

Version 1.0.7
- updated css for mobile
- changed row and column defatult limits

Version 1.0.6
- fix bug mobile

Version 1.0.5
- fix bug mobile

Version 1.0.4
- added version on frontend

Version 1.0.3
- fix bug mobile

Version 1.0.2
- implemented back up system
- replaces comments with display:non

Version 1.0.1
- Commented out options

Version 1.0.0 Alpha